--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,15 +1,4 @@
 apiVersion: v2
-name: webapp
-description: A helm chart for a standard webapp using istio ingress
-version: 2.0.0
-annotations:
-  org.opencontainers.image.title: "webapp"
-  org.opencontainers.image.description: "A helm chart for a standard webapp using istio ingress"
-  org.opencontainers.image.ref.name: "webapp"
-  org.opencontainers.image.vendor: "Jmainguy"
-  org.opencontainers.image.licenses: "GPL-2.0"
-  org.opencontainers.image.authors: "Jonathan Seth Mainguy <jon@soh.re>"
-  org.opencontainers.image.source: "https://github.com/Standouthost/helm-webapp"
-  org.opencontainers.image.url: "https://github.com/Standouthost/helm-webapp"
-  org.opencontainers.image.documentation: "https://github.com/Standouthost/helm-webapp"
-  org.opencontainers.image.issue-tracker: "https://github.com/Standouthost/helm-webapp/issues"
+name: wordpress
+description: A Helm chart for deploying WordPress and MariaDB
+version: 0.1.0
